--- a/beta.html
+++ b/beta.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ryancodes.xyz</title>
-  <!-- Optional Google Font -->
+  <title>Ryancodes</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
     rel="stylesheet"
   />
   <style>
-    /* ====== Reset & Base Styles ====== */
     * {
       margin: 0;
       padding: 0;
@@ -22,7 +20,6 @@
       color: #fafafa;
       scroll-behavior: smooth;
     }
-    /* ====== Header & Navigation Pills ====== */
     header {
       position: fixed;
       top: 0;
@@ -91,7 +88,6 @@
       margin-bottom: 1rem;
       line-height: 1.5;
     }
-    /* Make About Me text less wide */
     #about p {
       max-width: 600px;
       margin: 0 auto 1rem;
@@ -99,7 +95,6 @@
     .highlight {
       color: #ffcc00;
     }
-    /* ====== Typed Text & Blinking Cursor ====== */
     .typed-container {
       font-size: 2rem;
       display: flex;
@@ -121,7 +116,6 @@
       0%, 50% { opacity: 1; }
       50.01%, 100% { opacity: 0; }
     }
-    /* ====== Project Card Styles ====== */
     .project-list {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -140,7 +134,6 @@
     .project-card:hover {
       transform: translateY(-5px);
     }
-    /* ====== Project Button ====== */
     .project-btn {
       display: inline-block;
       margin-top: 1rem;
@@ -255,12 +248,16 @@
         gap: 0.3rem;
         font-size: 0.9rem;
       }
+      /* Further reduce typed text and home text size for mobile */
+      .typed-container {
+        font-size: 1.2rem;
+      }
+      #home p {
+        font-size: 0.9rem;
+      }
       .skills-grid img {
         width: 80px;
         height: 80px;
-      }
-      .typed-container {
-        font-size: 1.5rem;
       }
     }
   </style>
