--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ryancodes.xyz</title>
+    <title>Terminal</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <style>
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div class="startup-screen" id="startupScreen">
-        <h1>Ryancodes.xyz</h1>
+        <h1>=Welcome to the terminal!</h1>
     </div>
 
     <div class="terminal" id="terminal">
@@ -144,7 +144,7 @@
                 const helpMsg = document.createElement("div");
                 helpMsg.className = "output";
                 terminal.insertBefore(helpMsg, terminal.children[1]);
-                simulateTypeEffect("Welcome to Ryancodes.xyz 2.0! | Type 'HELP' for a list of commands | Click anywhere to enter full screen", helpMsg, true, () => {
+                simulateTypeEffect("Welcome to the Ryancodes Terminal! | Type 'HELP' for a list of commands | Click anywhere to enter full screen", helpMsg, true, () => {
                     document.getElementById("commandInput").focus();
                 });
             }, 4000); // Adjusted for the faster transition
@@ -171,7 +171,7 @@
             const userAgent = navigator.userAgent.toLowerCase();
             const isMobile = /iphone|ipad|ipod|android|blackberry|iemobile|opera mini/i.test(userAgent);
             if (isMobile) {
-                window.location.href = 'https://ryancodes.xyz/mobile';
+                window.location.href = 'https://ryancodes.xyz/';
             }
         }
 
@@ -238,7 +238,7 @@
                     if (command !== "") {
                         switch (command) {
                             case "WHOAMI":
-                                response = "Hi I'm Ryan, and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finaly how to make games using Godot and Unreal Engine.";
+                                response = "Hi my name is Ryan, I'm 13 and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finaly how to make games using Godot and Unreal Engine.";
                                 break;
                             case "CONTACT":
                                 response = "Go to https://ryancodes.xyz/contact to get in touch.";
@@ -253,10 +253,7 @@
                                 response = "https://ryancodes.xyz/privacy-policy";
                                 break;
                             case "IZTECH":
-                                response = "Check out Iztech- my newly released tech support company- at https://iztech.xyz. At Iztech, we help with anything tech related, for FREE.";
-                                break;
-                            case "MATRIX":
-                                response = "Only on the classic site: https://ryancodes.xyz/classic";
+                                response = "Check out Iztech- my tech support company- at https://iztech.xyz. At Iztech, we help with anything tech related, for FREE.";
                                 break;
                             case "MYGAMES":
                                 response = "https://ryancodes.xyz/games";
