--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div class="startup-screen" id="startupScreen">
-        <h1>=Welcome to the terminal!</h1>
+        <h1>Welcome to the terminal!</h1>
     </div>
 
     <div class="terminal" id="terminal">
@@ -171,7 +171,7 @@
             const userAgent = navigator.userAgent.toLowerCase();
             const isMobile = /iphone|ipad|ipod|android|blackberry|iemobile|opera mini/i.test(userAgent);
             if (isMobile) {
-                window.location.href = 'https://ryancodes.xyz/';
+                window.location.href = 'https://ryancodes.xyz/#mobile';
             }
         }
 
