--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
           <p>A platformer I created using Godot.</p>
           <a href="https://ryancodes.itch.io/platformer" class="project-btn" target="_blank">View Project</a>
         </div>
+        <div class="project-card">
+          <h3>Iztech</h3>
+          <p>A free tech support firm I created.</p>
+          <a href="https://iztech.xyz" class="project-btn" target="_blank">View Project</a>
+        </div>
       </div>
     </section>
 
