--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
         font-size: 0.9rem;
       }
       .typed-container { font-size: 1.2rem; }
+      /* Allow typed text to wrap on smaller screens */
+      .typed-text { white-space: normal; }
       #home p { font-size: 0.9rem; }
       .skills-grid img { width: 80px; height: 80px; }
     }
