--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ryancodes.xyz</title>
-  <!-- Optional Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    /* ====== Reset & Base Styles ====== */
     * {
       margin: 0;
       padding: 0;
@@ -19,7 +17,6 @@
       color: #fafafa;
       scroll-behavior: smooth;
     }
-    /* ====== Header & Navigation Pills ====== */
     header {
       position: fixed;
       top: 0;
@@ -56,13 +53,11 @@
       background-color: #333333;
       transform: scale(1.05);
     }
-    /* Ensure pill text wraps nicely if needed */
     .nav-pill span {
       line-height: 1.2;
       text-align: center;
       white-space: normal;
     }
-    /* Increase the icon size in nav pills */
     .nav-pill svg {
       width: 20px;
       height: 20px;
@@ -82,7 +77,6 @@
       transition: opacity 1.5s ease, transform 1.5s ease;
       text-align: center;
     }
-    /* Remove extra top space on the home section */
     #home {
       scroll-margin-top: 0;
     }
@@ -98,7 +92,6 @@
       margin-bottom: 1rem;
       line-height: 1.5;
     }
-    /* Make About Me text less wide */
     #about p {
       max-width: 600px;
       margin: 0 auto 1rem;
@@ -106,18 +99,15 @@
     .highlight {
       color: #ffcc00;
     }
-    /* ====== Typed Text & Blinking Cursor ====== */
     .typed-container {
       font-size: 2rem;
       margin-bottom: 1rem;
       text-align: center;
     }
-    /* The typed text and its attached cursor (via pseudo‑element) */
     #typed-text {
       display: inline;
       white-space: pre-wrap;
     }
-    /* Pseudo‑element for the blinking cursor */
     #typed-text::after {
       content: "";
       display: inline-block;
@@ -132,7 +122,6 @@
       0%, 50% { opacity: 1; }
       50.01%, 100% { opacity: 0; }
     }
-    /* ====== Project Card Styles ====== */
     .project-list {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -151,7 +140,6 @@
     .project-card:hover {
       transform: translateY(-5px);
     }
-    /* ====== Project Button ====== */
     .project-btn {
       display: inline-block;
       margin-top: 1rem;
@@ -167,7 +155,6 @@
       background-color: #e6b800;
       transform: scale(1.05);
     }
-    /* ====== About Section Social Buttons ====== */
     .social-buttons {
       display: flex;
       justify-content: center;
@@ -200,7 +187,6 @@
     .social-button img {
       object-fit: contain;
     }
-    /* ====== Skills Section ====== */
     #skills {}
     .skills-grid {
       display: flex;
@@ -216,13 +202,11 @@
       height: 100px;
       object-fit: contain;
     }
-    /* ====== Footer ====== */
     footer {
       background-color: #1c1c1c;
       text-align: center;
       padding: 1rem;
     }
-    /* ====== Custom Scrollbar Styling ====== */
     ::-webkit-scrollbar { width: 12px; }
     ::-webkit-scrollbar-track { background: #101010; }
     ::-webkit-scrollbar-thumb {
@@ -231,7 +215,6 @@
       border: 3px solid #101010;
     }
     html { scrollbar-width: thin; scrollbar-color: #ffcc00 #101010; }
-    /* ====== Modal Popup Styles ====== */
     .modal {
       display: none; /* Hidden by default */
       position: fixed;
@@ -435,12 +418,11 @@
 
   <!-- ====== Footer ====== -->
   <footer>
-    <p>&copy; Ryan Kiapour 2025</p>
+    <p>Made with ❤️‍🔥 by Ryan Kiapour</p>
   </footer>
 
   <!-- ====== JavaScript ====== -->
   <script>
-    // Intersection Observer for fade-in animations
     const options = { 
       threshold: 0.15, 
       rootMargin: "0px 0px -30% 0px"
@@ -523,7 +505,6 @@
       });
     });
   </script>
-  <!-- ====== Modal Popup Styles (moved here for convenience) ====== -->
   <style>
     .modal {
       display: none;
