--- a/terminal.html
+++ b/terminal.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Terminal</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon4.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
