--- a/terminal.html
+++ b/terminal.html
@@ -218,7 +218,7 @@
                 response = "https://ryancodes.xyz/apps";
                 break;
               case "HELP":
-                response = "Available commands: WHOAMI, CONTACT, CLEAR, MATRIX, IZTECH, MYAPPS, MYGAMES, HELP, LEAVE.";
+                response = "Available commands: WHOAMI, CONTACT, CLEAR, IZTECH, MYAPPS, MYGAMES, HELP, LEAVE.";
                 break;
               case "PRIVACY-POLICY":
                 response = "https://ryancodes.xyz/privacy-policy";
