--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       <div class="skills-category">
         <h3>Learning</h3>
         <div class="skills-grid">
-          <div class="skill-item" data-tooltip="React: AWS: Amazon Web Services, a comprehensive cloud platform offering scalable, secure, and flexible computing services for modern applications">
+          <div class="skill-item" data-tooltip="AWS: A comprehensive cloud platform offering secure and flexible computing services for modern applications">
             <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/65dea6c4eaca7da319e552c09f4cf5a9a8dab2c8/icons/AWS-Dark.svg" alt="AWS" />
           </div>
           <div class="skill-item" data-tooltip="React: UI library for modern web apps">
