--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       padding: 0.6rem 1.5rem;
       background: linear-gradient(145deg, #313131, #232323);
       color: #fafafa;
-      border-radius: 6px;
+      border-radius: 9999px;
       text-decoration: none;
       font-weight: 600;
       letter-spacing: 0.5px;
@@ -234,35 +234,30 @@
       position: absolute;
       top: 0;
       left: -100%;
-      width: 200%;
+      width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, #ffcc00, #ffcc00, transparent);
+      background: linear-gradient(90deg, transparent, rgba(255, 204, 0, 0.8), #ffcc00);
       transition: 0.5s;
       z-index: -1;
     }
     .project-btn:hover {
       color: #101010;
-      transform: translateY(-3px);
+      transform: translateY(-3px) scale(1.05);
       box-shadow: 0 5px 15px rgba(255, 204, 0, 0.4),
                   inset 0 1px 1px rgba(255, 255, 255, 0.4);
     }
     .project-btn:hover::before {
-      left: -50%;
-      animation: shimmer 1.5s infinite linear;
+      left: 0;
+      animation: shimmer 1.5s infinite;
     }
     .project-btn::after {
-      content: "→";
-      position: absolute;
-      right: 10px;
-      opacity: 0;
-      transition: all 0.3s ease;
+      content: none;
     }
     .project-btn:hover::after {
-      opacity: 1;
-      right: 15px;
+      opacity: 0;
     }
     .project-btn:hover {
-      padding-right: 2rem;
+      padding-right: 1.5rem;
     }
     /* Project Section Heading Style */
     #projects h2 {
