Fixed rapid reload bud

--- a/index.html
+++ b/index.html
@@ -259,5 +259,19 @@
   <!-- JavaScript -->
   <script src="js/main.js" defer></script>
   <script src="js/cursor.js" defer></script>
+  <script>
+    if ('scrollRestoration' in history) {
+      history.scrollRestoration = 'manual';
+    }
+    
+    window.addEventListener('load', function() {
+      requestAnimationFrame(() => {
+        window.scrollTo({
+          top: 0,
+          behavior: 'instant'
+        });
+      });
+    });
+  </script>
 </body>
 </html>
