Added Eco Educator

--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
           <p>A free tech support firm I created.</p>
           <a href="https://iztech.xyz" class="project-btn" target="_blank">View Project</a>
         </div>
+        <div class="project-card">
+          <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
+          <h3>Eco Educator | Testflight</h3>
+          <p>An IOS app I created for learning how to recycle for the 2025 Swift Student Challenge.</p>
+          <a class="project-btn" target="_blank">Coming Soon</a>
+        </div>
       </div>
     </section>
 
