Added Eco Educator link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
             <h3>Eco Educator | Testflight</h3>
             <p>An IOS app I created for learning how to recycle for the 2025 Swift Student Challenge.</p>
-            <a class="project-btn" target="_blank">Coming Soon</a>
+            <a href="https://testflight.apple.com/join/R3C1eW1q" class="project-btn" target="_blank">View Project/a>
           </div>
         </div>
         
