--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
           </div>
           <div class="project-card">
             <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
-            <h3>Eco Educator | Testflight</h3>
+            <h3>Eco Educator</h3>
             <p>An IOS app I created for learning how to recycle for the 2025 Swift Student Challenge.</p>
-            <a href="https://testflight.apple.com/join/R3C1eW1q" class="project-btn" target="_blank">View Project</a>
+            <a href="https://apps.apple.com/us/app/eco-educator/id6743406567" class="project-btn" target="_blank">View Project</a>
           </div>
         </div>
         
