ANOTHER MOBILE HOTFIX (PLEASE WORK)

--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
   <div id="mobile-popup" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <p>Terminal is not available on mobile.</p>
+      <h2>⚠️ Mobile Warning</h2>
+      <p>Terminal is not available on mobile devices. Please visit on a desktop device for the full experience.</p>
     </div>
   </div>
 
