Updated Terminal app command

--- a/terminal.html
+++ b/terminal.html
@@ -212,10 +212,10 @@
                 response = "Hi my name is Ryan, I'm 13 and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finally how to make games using Godot and Unreal Engine.";
                 break;
               case "CONTACT":
-                response = "Go to https://ryancodes.xyz/contact to get in touch.";
+                response = "Email me at ryan@ryancodes.xyz";
                 break;
               case "MYAPPS":
-                response = "https://ryancodes.xyz/apps";
+                response = "WAR! - Card Game ( https://apps.apple.com/us/app/war-card-game/id6478232396 ) | EcoEducator ( https://apps.apple.com/us/app/eco-educator/id6743406567 )";
                 break;
               case "HELP":
                 response = "Available commands: WHOAMI, CONTACT, CLEAR, IZTECH, MYAPPS, MYGAMES, HELP, QUIT.";
