--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="project-card">
             <img src="/Portfolio/Iztech.png" alt="Iztech" class="project-img" loading="lazy">
             <h3>Iztech</h3>
-            <p>A free tech support firm I created.</p>
+            <p>A free tech support firm I created. (END OF LIFE)</p>
             <div class="tech-stack">
               <span class="tech-tag">HTML</span>
               <span class="tech-tag">CSS</span>
