--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="#fafafa" viewBox="0 0 24 24">
             <path d="M10 4H2v16h20V6H12l-2-2z"/>
           </svg>
-          <span>My Projects</span>
+          <span>My Public Projects</span>
         </a>
         <!-- About Me Pill -->
         <a href="#about" class="nav-pill">
