Updated index metadata

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ryancodes.xyz</title>
+  <meta name="description" content="Ryancodes: the portfolio site of Ryan Kiapour">
+  <title>Ryancodes</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/cursor.css">
