--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 
     <section id="projects">
-      <h2>My Projects</h2>
+      <h2>My Public Projects</h2>
       
       <!-- Project Carousel -->
       <div class="carousel-container">
